Java5. mainly generics and enhanced for-loops.
git-svn-id: http://sesat.no/svn/sesat-kernel/trunk@2597 cdc3010f-a60b-0410-91f3-d90f869209c8